--- a/ipynb/colab-tensorflow-02-TensorBoard.ipynb
+++ b/ipynb/colab-tensorflow-02-TensorBoard.ipynb
@@ -78,6 +78,7 @@
       },
       "cell_type": "code",
       "source": [
+        "# step 2: 執行 tensor flow 程式, 會產生資料在 logs/ 下\n",
         "from __future__ import print_function\n",
         "import tensorflow as tf\n",
         "\n",
@@ -141,6 +142,8 @@
       },
       "cell_type": "code",
       "source": [
+        "# step 3: 在 console 執行 tensorboard ... \n",
+        "# 到此只產生 localhost 的網址，無法從外部看到, 必須再搭配 ngrok 來轉址到外面\n",
         "# 不知道要怎樣讓底下的背景執行，目前測試是光用 & 無法背景執行，要按左邊的中斷\n",
         "# 又怕中斷後它並不在背景處理\n",
         "!tensorboard --logdir=\"/content/logs/\"&"
@@ -170,7 +173,7 @@
       },
       "cell_type": "code",
       "source": [
-        "# 要在 colab 上使用 tensorboard 嗎？請參考\n",
+        "# step 4: 要在 colab 上使用 tensorboard 嗎？請參考\n",
         "#   https://www.dlology.com/blog/quick-guide-to-run-tensorboard-in-google-colab/\n",
         "# PS: 底下命令做一次就好，它會在背景執行\n",
         "# PS: 沒試過一開始執行的話，會不會正常顯示 tensorboard\n",
